# picoNewton

./: README.md  picoNewton_v1.ipynb  picoNewton_v1.py  picoNewton_v2.ipynb
picoNewton_v3/: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  run_workflow.py
picoNewton_v3/configs/: effect_gates.json  numerical_thresholds.json  publication.json  quick.json
picoNewton_v3/data/: controls_matrix.csv  data_dictionary.csv  effect_size_acceptance_criteria.csv  global_parameter_ranges.csv  numerical_thresholds.csv  physiological_artery_ranges.csv  publication_dataset_schema.json  source_manifest.csv  uncertainty_distributions.csv  v2_harmonic_inputs.csv
picoNewton_v3/docs/: CODE_AVAILABILITY.md  DATA_AVAILABILITY.md  MODEL_SPECIFICATION.md  PRELIMINARY_DRY_RUN.md  QUICK_EXECUTION_REPORT.md  REPRODUCIBILITY.md
picoNewton_v3/notebooks/: picoNewton_v3_mechanosensory.ipynb  picoNewton_v3_mechanosensory_observability.ipynb
picoNewton_v3/references/: references.bib
picoNewton_v3/tests/: conftest.py  test_io.py  test_model.py  test_notebook.py  test_observability_notebook.py  test_workflow.py
picoNewton_v4/: .gitignore  CITATION.cff  DO_NOT_USE.txt  PACKAGE_SHA256SUMS.json  PACKAGE_TEST_LOG.txt  PACKAGE_VALIDATION.json  README.md  STEP4_BRANCH_MARKER.txt  STEP4_BRANCH_MARKER_2.txt  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
picoNewton_v4/configs/: calibration_template.json  literature_calibration.json  membrane.json  model.json  protocol.yaml  publication.json  quick.json  source_lock.yaml
picoNewton_v4/data/: ground_truth_arteries.csv  parameter_source_lock.csv  piezo1_reference_spec.json  source_manifest.csv
picoNewton_v4/docs/: COLAB_EXECUTION.md  FIRST_RUN_ASSESSMENT.md  OUTPUT_REFERENCE.md  REPRODUCIBILITY.md  SCIENTIFIC_COMPLETION_PATH.md  SCIENTIFIC_MODEL.md  STEP3_PACKAGE_AND_COLAB.md  STEP4_HYDRODYNAMIC_REPORT.md  STEP5_PIEZO1_SOURCE_MODEL.md  STEP6_MEMBRANE_INTERFACE.md
picoNewton_v4/notebooks/: picoNewton_v4_colab.ipynb  picoNewton_v4_colab_validation.json
picoNewton_v4/scripts/: run_colab_production.py  run_local.py  verify_package.py
picoNewton_v4/tests/: test_calibration.py  test_endpoints.py  test_hydrodynamics.py  test_hypotheses.py  test_membrane.py  test_notebook_contract.py  test_piezo1.py  test_protocol.py  test_runtime.py  test_scientific_study.py  test_sources.py  test_step4_workflow.py  test_step5_workflow.py  test_step6_workflow.py  test_vector_interface.py  test_vectorized_piezo1.py  test_workflow.py
(+63 files in other folders)
