[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piconewton-v4"
version = "4.0.0"
description = "Standalone anisotropic Womersley, membrane-cortex and Piezo1 mechanosensory model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "threadpoolctl>=3.5,<4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "nbformat>=5.10,<6"
]

[project.scripts]
piconewton-v4 = "piconewton_v4.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
